<resources>
    <string name="app_name">Nusaht</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="landing_1">... of Songs </string>
    <string name="landing_2">Free on Nusah</string>

    <string name="login">Login</string>
    <string name="signup">Signup</string>
    <string name="cancel">Cancel</string>

    <string name="nusah_signup">Nusah Signup</string>

    <string name="email">email</string>
    <string name="password">password</string>
    <string name="repeat_pass">Repeat password</string>
    <string name="name">User name</string>
    <string name="age">Age</string>
    <string name="reset">Reset</string>
    <string name="uploadFromCamera">img Camera</string>
    <string name="uploadAvatar">img Avatar</string>
    <string name="forgotpwd">forgot password</string>
    <string name="forgotpwdhead">Password Recovery Using Email</string>
    <string name="enterpwdmail">Enter your recovery email</string>
    <string name="sendrecoverycode">Send Code</string>
    <string name="title_activity_main">MainAct</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <string name="title_search">Search</string>
    <string name="title_library">Library</string>
    <string name="title_nushahVR">NushahVR</string>

    <string name="mainAppTitle">NusahAT</string>


    <string name="classText">A</string>
</resources>