<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/black"
    tools:context=".account.ForgotPwdEmail">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/forgotpwdhead"
            android:textColor="@color/purple_500"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="50dp"
            android:layout_marginStart="20dp"
            android:textSize="25dp"
           />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/enterpwdmail"
            android:textColor="@color/white"
            android:textSize="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginBottom="10dp" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            app:errorEnabled="true"
            app:startIconDrawable="@drawable/ic_baseline_email_24"
            android:hint="@string/email">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/username_l"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:inputType="text"
                android:maxLines="1" />

            <com.google.android.material.button.MaterialButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/forgotpwd"
                android:text="@string/sendrecoverycode"
                app:strokeColor="@color/white"
                app:strokeWidth="3dp"
                android:layout_margin="20dp"
                android:textColor="@color/white"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton" />
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>
</FrameLayout>