<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#A6A0A0"
    android:backgroundTint="#937979"
    android:scrollbarSize="34dp"
    tools:context=".landing">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#000000"
        android:orientation="vertical">


        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/logo" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:text="@string/landing_1"
            android:textAlignment="center"
            android:textColor="#CCC1C1"
            android:textSize="34sp" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/landing_2"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textSize="34sp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/login_btn_l"
            android:layout_width="match_parent"
            android:layout_marginTop="70dp"
            android:layout_marginHorizontal="30dp"
            android:layout_height="60dp"
            app:cornerRadius="10dp"
            android:backgroundTint="@color/button_stoke"
            android:textSize="20sp"
            android:text="@string/login" />

        <com.google.android.material.button.MaterialButton
            style="?attr/materialButtonOutlinedStyle"
            app:strokeColor="@color/button_stoke"
            app:strokeWidth="4dp"
            android:id="@+id/signup_btn_l"
            android:layout_width="match_parent"
            android:layout_marginHorizontal="30dp"
            android:layout_height="60dp"
            app:cornerRadius="10dp"
            android:textColor="@color/white"
            android:layout_marginTop="15dp"
            android:textSize="20sp"
            android:text="@string/signup" />

<!--        <Button-->
<!--            android:id="@+id/login_bt_l"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_marginLeft="20dp"-->
<!--            android:layout_marginTop="60dp"-->
<!--            android:layout_marginRight="20dp"-->
<!--            android:background="#70AE8A"-->
<!--            android:text="@string/login"-->
<!--            android:textSize="24sp"-->
<!--            android:textStyle="bold" />-->

<!--        <Button-->
<!--            android:id="@+id/signupbtn_l"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_marginLeft="20dp"-->
<!--            android:layout_marginTop="30dp"-->
<!--            android:layout_marginRight="20dp"-->
<!--            android:text="@string/signup"-->
<!--            android:textSize="24sp"-->
<!--            android:textStyle="bold" />-->

    </LinearLayout>
</FrameLayout>