<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    tools:context=".account.login" >

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/logo"
        android:textAlignment="center" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="180dp"
        android:orientation="vertical">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="120dp"
                android:orientation="vertical" >

<!--                <EditText-->
<!--                    android:id="@+id/username_l"-->
<!--                    android:layout_width="match_parent"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:layout_marginHorizontal="15dp"-->
<!--                    android:layout_marginTop="10dp"-->
<!--                    android:inputType="textPersonName"-->
<!--                    android:textColorHint="@color/white"-->
<!--                    android:hint="@string/name"-->
<!--                    android:drawableStart="@drawable/ic_baseline_person_24"-->
<!--                    android:drawablePadding="10sp"-->
<!--                    android:textColor="#FFFFFF" />-->
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    app:errorEnabled="true"
                    app:startIconDrawable="@drawable/ic_baseline_person_24"
                    android:hint="@string/name">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/username_l"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="20dp"
                        android:inputType="text"
                        android:maxLines="1" />
                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/pwd_tinput_l"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:startIconDrawable="@drawable/ic_baseline_lock_24"
                    android:layout_margin="4dp"
                    app:endIconMode="password_toggle"
                    android:hint="@string/password">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/pwd_l"
                        android:layout_width="match_parent"
                        android:layout_marginHorizontal="20dp"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword"/>
                </com.google.android.material.textfield.TextInputLayout>
<!--                <EditText-->
<!--                    android:id="@+id/pwd_l"-->
<!--                    android:layout_width="match_parent"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:layout_marginHorizontal="15dp"-->
<!--                    android:layout_marginTop="10dp"-->
<!--                    android:inputType="textPersonName"-->
<!--                    android:textColorHint="@color/white"-->
<!--                    android:hint="@string/password"-->
<!--                    android:drawableStart="@drawable/ic_baseline_lock_24"-->
<!--                    android:drawablePadding="10sp"-->
<!--                    android:textColor="#FFFFFF" />-->

                <TextView
                    android:id="@+id/error_l"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="#FF0000"
                    android:layout_marginHorizontal="20sp"
                    android:layout_marginTop="20sp"
                    android:textSize="25sp"
                    android:visibility="gone"
                    android:text="" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_marginRight="20dp">
                <com.google.android.material.button.MaterialButton
                    android:id="@+id/login_l"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:text="@string/login" />
                <com.google.android.material.button.MaterialButton
                    android:id="@+id/cancel_button_l"
                    style="@style/Widget.MaterialComponents.Button.TextButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="12dp"
                    android:layout_marginRight="12dp"
                    android:layout_toStartOf="@id/login_l"
                    android:layout_toLeftOf="@id/login_l"
                    android:text="@string/cancel" />
                </RelativeLayout>

                <com.google.android.material.button.MaterialButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/forgotpwd"
                    android:text="@string/forgotpwd"
                    app:strokeColor="@color/white"
                    app:strokeWidth="1.5dp"
                    android:layout_margin="20dp"
                    android:textColor="@color/white"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton" />
            </LinearLayout>
        </ScrollView>
    </LinearLayout>

</FrameLayout>