<?xml version="1.0" encoding="utf-8"?>

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    tools:context=".account.signup">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:src="@drawable/logo" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="50dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

<!--                <TextView-->
<!--                    android:layout_width="wrap_content"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:id="@+id/testTextView"-->
<!--                    android:textColor="@color/white"-->
<!--                    android:textSize="20dp"-->
<!--                    android:text="Test this app"-->
<!--                    />-->

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/username_inputlayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    app:errorEnabled="true"
                    app:startIconDrawable="@drawable/ic_baseline_person_24"
                    android:hint="@string/name">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/username_s"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="20dp"
                        android:inputType="text"
                        android:maxLines="1"
                        />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/email_inputlayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    app:errorEnabled="true"
                    app:startIconDrawable="@drawable/ic_baseline_email_24"
                    android:hint="@string/email">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/email_s"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="20dp"
                        android:inputType="text"
                        android:maxLines="1"
                        />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/age_inputlayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    app:errorEnabled="true"
                    app:startIconDrawable="@drawable/ic_baseline_last_page_24"
                    android:hint="@string/age">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/age_s"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="20dp"
                        android:inputType="number"
                        android:maxLines="1"
                        />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/pwd_inputlayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    app:errorEnabled="true"
                    app:startIconDrawable="@drawable/ic_baseline_lock_24"
                    app:endIconMode="password_toggle"
                    android:hint="@string/password">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/pwd_1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="20dp"
                        android:inputType="textPassword"
                        android:maxLines="1"
                        />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/pwd2_inputlayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    app:errorEnabled="true"
                    app:startIconDrawable="@drawable/ic_baseline_lock_24"
                    app:endIconMode="password_toggle"
                    android:hint="@string/repeat_pass">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/pwd_2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="20dp"
                        android:inputType="textPassword"
                        android:maxLines="1"
                        />
                </com.google.android.material.textfield.TextInputLayout>

<!--                <RelativeLayout-->
<!--                    android:layout_width="fill_parent"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:layout_marginRight="55dp">-->
<!--                    <com.google.android.material.button.MaterialButton-->
<!--                        android:layout_width="wrap_content"-->
<!--                        android:layout_height="wrap_content"-->
<!--                        android:id="@+id/uploadavatar"-->
<!--                        app:icon="@drawable/ic_baseline_add_24"-->
<!--                        android:text="@string/uploadAvatar"-->
<!--                        app:strokeColor="@color/white"-->
<!--                        app:strokeWidth="2dp"-->
<!--                        android:layout_marginRight="20dp"-->
<!--                        android:layout_toStartOf="@id/uploadFromCamera"-->
<!--                        android:textColor="@color/white"-->
<!--                        style="@style/Widget.MaterialComponents.Button.OutlinedButton.Icon" />-->
<!--                    <com.google.android.material.button.MaterialButton-->
<!--                        android:layout_width="wrap_content"-->
<!--                        android:layout_height="wrap_content"-->
<!--                        android:id="@+id/uploadFromCamera"-->
<!--                        app:icon="@drawable/ic_baseline_add_24"-->
<!--                        android:text="@string/uploadFromCamera"-->
<!--                        app:strokeColor="@color/white"-->
<!--                        app:strokeWidth="2dp"-->
<!--                        android:layout_alignParentEnd="true"-->
<!--                        android:textColor="@color/white"-->
<!--                        style="@style/Widget.MaterialComponents.Button.OutlinedButton.Icon" />-->
<!--                </RelativeLayout>-->
                <RelativeLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_marginRight="20dp">
                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/reset_btn_s"
                        style="?attr/materialButtonOutlinedStyle"
                        app:strokeColor="@color/button_stoke"
                        android:textColor="@color/white"
                        android:textStyle="bold"
                        android:textSize="20dp"
                        app:strokeWidth="3dp"
                        android:layout_width="160dp"
                        android:layout_height="wrap_content"
                        android:layout_toStartOf="@+id/signup_btn_s"
                        android:text="@string/reset" />
                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/signup_btn_s"
                        android:backgroundTint="@color/button_stoke"
                        android:layout_width="160dp"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_marginHorizontal="20dp"
                        android:textSize="18sp"
                        android:text="@string/signup" />
                </RelativeLayout>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</FrameLayout>


